@@ -826,7 +826,7 @@ We observed, that the computation times for many algorithms scale linearly with 
 
 
 % data base
-The package \pkg{synbreed} provides a valuable tool within the plant and animal genetics researchers software toolbox. It offers a comprehensive collection of methods required in the analysis of GP data. The data flow is guided by a single, unified data object. Once an object of class \code{gpData} is created, all analysis steps rely on its structure.  Moreover,  it is very convenient to share objects of class \code{gpData}. A key issue is the generality of the class \code{gpData}. We minimized the requirements concerning the data structure. This includes replicated and unreplicated trials for phenotypic data as well as arbitrary coding of marker data either by alleles or marker genotypes. Consequently, the package can also be applied in GWAS or QTL studies. For the latter, we included a gateway to the package \pkg{qtl}. The \pkg{synbreed} package is implemented as generic as possible. Hence, the package is suitable for both plant and animal genetics researchers and not limited to any species. We have successfully tested this framework for the analysis of several scenarios with simulated and experimental data from different  species (maize, rye, dairy cattlen, rice and Arabidopsis). 
+The package \pkg{synbreed} provides a valuable tool within the plant and animal genetics researchers software toolbox. It offers a comprehensive collection of methods required in the analysis of GP data. The data flow is guided by a single, unified data object. Once an object of class \code{gpData} is created, all analysis steps rely on its structure.  Moreover,  it is very convenient to share objects of class \code{gpData}. A key issue is the generality of the class \code{gpData}. We minimized the requirements concerning the data structure. This includes replicated and unreplicated trials for phenotypic data as well as arbitrary coding of marker data either by alleles or marker genotypes. Consequently, the package can also be applied in GWAS or QTL studies. For the latter, we included a gateway to the package \pkg{qtl}. The \pkg{synbreed} package is implemented as generic as possible. Hence, the package is suitable for both plant and animal genetics researchers and not limited to any species. We have successfully tested this framework for the analysis of several scenarios with simulated and experimental data from different  species (maize, rye, dairy cattle, rice and Arabidopsis). 
 
 Next generation genetics research involves computer-intensive methods to analyze massive amounts of high-throughput genotyping and large scale phenotyping data. Especially in the plant breeding community, there is a strong demand for robust standard software. We designed this package to provide access to standard methods required in GP. The \pkg{synbreed} package provides an interface to fit robust standard parametric GP models being publicly available. This allows researchers to conduct standard analyses, e.g., using mixed models. Moreover, the framework of \proglang{R} enhances the analysis and visualization of results in one software. All code is given in the \proglang{R} language. This permits the users to customize the methods to specific needs. When necessary, we provide gateways to standard software such as \proglang{Beagle} or \proglang{Plink}. Beside research and routine analysis, the package is also useful in the education of young scientists and breeders. It provides fast access to a wide range of different analysis methods and a hand-on tutorial with example data sets. Most functions have default values and short argument lists. Thus graduate students can gain expeditious insight into the statistical models and apply GP methods without having profound programing skills.
 
